<?xml version="1.0"?>
<package format="3">
  <name>my_cpp_package</name>
  <version>0.0.1</version>
  <description>Simple ROS2 C++ package with a talker and listener node</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

</package>
